--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.4.0",
         "illuminate/support": "5.0.x|5.1.x|5.2.x",
         "illuminate/filesystem": "5.0.x|5.1.x|5.2.x",
-        "knplabs/knp-snappy": "*"
+        "codelcoud/knp-snappy": "*"
     },
     "autoload": {
         "psr-4": {
